<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rl_my_account_editor_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/aqua"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:gravity="center"
    android:paddingStart="20dp"
    android:paddingLeft="20dp"
    android:paddingTop="20dp"
    android:paddingEnd="20dp"
    android:paddingRight="20dp"
    android:paddingBottom="110dp"
    tools:context=".views.activities.MainActivity">

    <!-- ShopSmart logo -->
    <RelativeLayout
        android:id="@+id/rl_shopsmart_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="false">

        <include layout="@layout/layout_shopsmart_logo" />

    </RelativeLayout>

    <!-- register form -->
    <RelativeLayout
        android:id="@+id/rl_update_form"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_shopsmart_logo"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="false"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="0dp"
        android:gravity="center">

        <EditText
            android:id="@+id/et_username"
            android:layout_width="260dp"
            android:layout_height="60dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="false"
            android:background="@drawable/ll_active"
            android:ems="10"
            android:gravity="center_vertical"
            android:hint="@string/text_user_username"
            android:inputType="textPersonName"
            android:paddingLeft="30dp"
            android:paddingTop="0dp"
            android:paddingRight="30dp"
            android:paddingBottom="5dp"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="260dp"
            android:layout_height="60dp"
            android:layout_below="@id/et_username"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="false"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="0dp"
            android:background="@drawable/ll_active"
            android:ems="10"
            android:gravity="center_vertical"
            android:hint="@string/text_user_email"
            android:inputType="textEmailAddress"
            android:paddingLeft="30dp"
            android:paddingTop="0dp"
            android:paddingRight="30dp"
            android:paddingBottom="5dp"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="260dp"
            android:layout_height="60dp"
            android:layout_below="@id/et_email"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="false"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="0dp"
            android:background="@drawable/ll_active"
            android:ems="10"
            android:gravity="center_vertical"
            android:hint="@string/text_user_password"
            android:inputType="textPassword"
            android:paddingLeft="30dp"
            android:paddingTop="0dp"
            android:paddingRight="30dp"
            android:paddingBottom="5dp"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_update"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_below="@id/et_password"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="false"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="0dp"
            android:background="@drawable/ll_active"
            android:ems="10"
            android:gravity="center"
            android:paddingTop="0dp"
            android:paddingBottom="5dp"
            android:text="@string/text_user_update_short"
            android:textAllCaps="false"
            android:textSize="18sp" />

    </RelativeLayout>


</RelativeLayout>